# uniblockchain

./: .gitignore  Cargo.toml  README.md  config.toml
chaves_privadas/: autoridade_1_privada.pem
chaves_publicas/: autoridade_1.pem
src/: main.rs
src/blockchain/: blockchain.rs  bloco.rs  disciplina.rs  estudante.rs  mod.rs  nota.rs  periodo_letivo.rs  transacao.rs
src/criptografia/: chaves.rs  mod.rs
src/rede/: mod.rs  p2p.rs
src/utils/: config.rs  erros.rs  mod.rs
