[package]
name = "uniblockchain"
version = "0.1.0"
edition = "2021"

[dependencies]
libp2p = { version = "0.44.0", features = ["mdns", "gossipsub", "tcp-tokio"] }
rsa = { version = "0.8.2" }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
rand = "0.8"
futures = "0.3"
tokio = { version = "1.12", features = ["full"] }
base64 = "0.13"
thiserror = "1.0"
parking_lot = "0.11"
config = "0.14.0"
signature = "2.2.0"
